# OpenGL-3D-Football-Penalty-Shooter

./: .gitignore  CMakeLists.txt  README.md  constants.h  fontloader.py  functionalities.cpp  functionalities.h  main.cpp  shapes.cpp  shapes.h  textureloader.py
resources/: ads.txt  defender.txt.tx  left_arm.txt  left_arm.txt.tx  right_arm.txt  right_arm.txt.tx  texture.txt
resources/fonts/: Ubuntu Mono Nerd Font Complete Mono.txt
